# convo_newsletter_crew

./: .gitignore  README.md  newsletter_draft.md  pyproject.toml
src/convo_newsletter_crew/: crew.py  main.py
src/convo_newsletter_crew/config/: tasks.yaml
src/convo_newsletter_crew/tools/: exa_tool.py
